--- a/config.yml
+++ b/config.yml
@@ -17,16 +17,7 @@ image_folder: "generated_images"
 base_url: "http://localhost:3000/"
 
 # GitHub username to fetch repositories from
-username: "wanghaisheng"
-
-# GitHub access token for API requests
-github_token: "your_github_access_token_here"
-
-# OpenAI API key for chat model
-openai_api_key: "your_openai_access_token_here"
-
-# Image API key for the image generation service
-image_api_key: "your_image_api_key_here"
+username: "your_github_username_here"
 
 # OpenAI model for chat
 openai:
