--- a/.github/workflows/arxiv-daily-appleblog.yml
+++ b/.github/workflows/arxiv-daily-appleblog.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Run daily arxiv
         run: |
           # python grab-paper.py
-          python main.py run --env=${{ env.RUN_ENV }} --power=${{ env.POWER }}
+          python daily_github_activity_duck.py run --env=${{ env.RUN_ENV }} --power=${{ env.POWER }}
         env:
           repo: ${{github.repository}}       
       # ============================================
